--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,198 @@
-attr==0.3.2
-brotli==1.0.9
-brotlicffi==1.0.9.2
-ConfigParser==5.3.0
-contextlib2==21.6.0
-cryptography==40.0.2
-Cython==0.29.34
-dl==0.1.0
-docutils==0.20
-HTMLParser==0.0.2
-ipython==8.13.2
-ipywidgets==8.0.6
+altair==4.2.0
+anyio==3.6.2
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.2.1
+attrs==22.2.0
+backcall==0.2.0
+beautifulsoup4==4.11.2
+bleach==6.0.0
+blinker==1.6.2
+Boruta==0.3
+branca==0.6.0
+cachetools==5.2.1
+catboost==1.2
+category-encoders==2.6.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
+click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
+comm==0.1.2
+commonmark==0.9.1
+contourpy==1.0.7
+cycler==0.11.0
+debugpy==1.6.6
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.6
+docopt==0.6.2
+ensemble==0.0.dev1
+entrypoints==0.4
+et-xmlfile==1.1.0
+exceptiongroup==1.1.1
+executing==1.2.0
+fastjsonschema==2.16.3
+filelock==3.12.0
+Fiona==1.9.2
+Flask==2.3.2
+folium==0.14.0
+fonttools==4.38.0
+fqdn==1.5.1
+geopandas==0.12.2
+gitdb==4.0.10
+GitPython==3.1.30
+graphviz==0.20.1
+haversine==2.7.0
+idna==3.4
+imbalanced-learn==0.10.1
+imblearn==0.0
+importlib-metadata==6.0.0
+importlib-resources==5.12.0
+inflection==0.5.1
+iniconfig==2.0.0
+install==1.3.5
+ipykernel==6.21.3
+ipython==8.11.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.4
+isoduration==20.11.0
+itsdangerous==2.1.2
+jedi==0.18.2
 Jinja2==3.1.2
-jnius==1.1.0
-keyring==23.13.1
-lockfile==0.12.2
-mock==5.0.2
-Pillow==9.5.0
-protobuf==4.23.0
-pyOpenSSL==23.1.1
-railroad==0.5.0
-simplejson==3.19.1
-Sphinx==7.0.0
-tornado==6.3.1
-trove_classifiers==2023.5.2
-truststore==0.7.0
-urllib3_secure_extra==0.1.0
-xmlrpclib==1.0.1
-zstandard==0.21.0
-xmlrpclib==0.9.8
+joblib==1.2.0
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-contrib-core==0.4.2
+jupyter-contrib-nbextensions==0.7.0
+jupyter-events==0.6.3
+jupyter-highlight-selected-word==0.2.0
+jupyter-nbextensions-configurator==0.6.1
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+jupyter_server==2.4.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.5
+kiwisolver==1.4.4
+linear==0.0.dev0
+llvmlite==0.40.0
+lxml==4.9.2
+MarkupSafe==2.1.1
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+metrics==0.3.3
+mistune==2.0.5
+munch==2.5.0
+nbclassic==0.5.3
+nbclient==0.7.2
+nbconvert==7.2.9
+nbformat==5.7.3
+neighbors==0.1.0
+nest-asyncio==1.5.6
+nltk==3.2.4
+notebook==6.5.3
+notebook_shim==0.2.2
+numba==0.57.0
+numerize==0.12
+numpy==1.24.1
+openpyxl==3.1.1
+packaging==23.0
+pandas==1.5.3
+pandocfilters==1.5.0
+parso==0.8.3
+pathlib2==2.3.7.post1
+pathspec==0.5.5
+patsy==0.5.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.4.0
+platformdirs==3.5.0
+plotly==5.11.0
+plotly-express==0.4.1
+pluggy==1.0.0
+preprocessing==0.1.13
+prometheus-client==0.16.0
+prompt-toolkit==3.0.38
+protobuf==3.20.3
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==10.0.1
+pycparser==2.21
+pydeck==0.8.0
+Pygments==2.15.1
+Pympler==1.0.1
+pyparsing==3.0.9
+PyPrind==2.11.3
+pyproj==3.4.1
+pyrsistent==0.19.3
+pysut==1.1
+pytest==7.3.1
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2022.7
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+pyzmq==25.0.0
+qtconsole==5.4.0
+QtPy==2.3.0
+requests==2.28.2
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.0.1
+scikit-learn==1.2.2
+scipy==1.10.0
+seaborn==0.12.2
+semver==2.13.0
+Send2Trash==1.8.0
+shapely==2.0.1
+six==1.16.0
+sklearn==0.0.post1
+smmap==5.0.0
+sniffio==1.3.0
+soupsieve==2.4
+sphinx-rtd-theme==0.2.4
+stack-data==0.6.2
+stats==0.1.2a0
+stats-arrays==0.6.5
+statsmodels==0.13.5
+streamlit==1.20.0
+streamlit-folium==0.10.0
+sweetviz==2.1.4
+tabulate==0.9.0
+tenacity==8.1.0
+terminado==0.17.1
+threadpoolctl==3.1.0
+tinycss2==1.2.1
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
+tornado==6.2
+tqdm==4.65.0
+traitlets==5.9.0
+typing_extensions==4.4.0
+tzdata==2022.7
+tzlocal==4.2
+uri-template==1.2.0
+urllib3==1.26.14
+utils==1.0.1
+validators==0.20.0
+virtualenv==20.23.0
+watchdog==2.2.1
+wcwidth==0.2.6
+webcolors==1.12
+webencodings==0.5.1
+websocket-client==1.5.1
+Werkzeug==2.3.4
+widgetsnbextension==4.0.5
+wrapt==1.15.0
+xgboost==1.7.5
+zipp==3.11.0
+
 
